--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@t3-oss/env-nextjs": "^0.13.4",
+    "@tanstack/react-query": "^5.75.7",
+    "@trpc/client": "^11.1.2",
+    "@trpc/react-query": "^11.1.2",
+    "@trpc/server": "^11.1.2",
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -58,7 +63,9 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.1",
     "recharts": "^2.15.3",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
