--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.1",
